# 270

./: CHANGES  CMakeLists.txt  LICENSE  Readme.txt
.ipol/: Dockerfile
src/: image.cpp  image.h  image_processing.cpp  image_processing.h  main.cpp  point.h  symmetry_transform.cpp  symmetry_transform.h
src/png++/: error.hpp
